--- a/settings.properties
+++ b/settings.properties
@@ -1,9 +1,9 @@
 <-- common settings -->
 
 <-- use "ARTIFICIAL", "DIURNAL" or "GANGLIA" values -->
-MODELING_TYPE=ARTIFICIAL
+MODELING_TYPE=DIURNAL
 PREDICT_WINDOW=5
-QOS_REQUIREMENT=100
+QOS_REQUIREMENT=200
 FUTURE_PREDICTS_COUNT=3
 PROPORTION_OF_MAX=0.8
 IS_DATABASE_REQUESTS=true
@@ -16,13 +16,22 @@ SIN_PHASE=0.0
 <-- use "CONSTANT" or "POISSON" values -->
 DISTRIBUTION_TYPE=POISSON
 <-- use "LINEAR", "DEGREE" and "EXPONENTIAL" values -->
-SHAPE_TYPE=LINEAR
+SHAPE_TYPE=DEGREE
 A_COEFFICIENT=3.0
-B_COEFFICIENT=2.0
+B_COEFFICIENT=4.0
 MEAN_VALUE=30.0
 REQUESTS_COUNT=500
 RANDOMNESS=50
 
 <-- View properties -->
 
-POINTS_COUNT=100
+POINTS_COUNT=200
+SHOWING_POINTS_COUNT=300
+RENDERING_DELAY=0
+CLEAR_PLOT=true
+
+<-- UserImitator and Ganglia settings -->
+
+ORIGINAL_FILE_PATH=1.txt
+FILE_PATH_FOR_COPY=2.txt
+MONITORING_METRIC_NAME=diskstat_sda1_writes
