UPD settings of program

--- a/settings.properties
+++ b/settings.properties
@@ -1,34 +1,34 @@
 <-- common settings -->
 
 <-- use "ARTIFICIAL", "DIURNAL" or "GANGLIA" values -->
-MODELING_TYPE=DIURNAL
+MODELING_TYPE=GANGLIA
 PREDICT_WINDOW=5
-QOS_REQUIREMENT=200
-FUTURE_PREDICTS_COUNT=3
+QOS_REQUIREMENT=1200
+FUTURE_PREDICTS_COUNT=2
 PROPORTION_OF_MAX=0.8
 IS_DATABASE_REQUESTS=true
 
 <-- Generator's parameters -->
 
-SIN_AMPLITUDE=2.0
+SIN_AMPLITUDE=5.0
 SIN_PERIOD=5.0
 SIN_PHASE=0.0
 <-- use "CONSTANT" or "POISSON" values -->
 DISTRIBUTION_TYPE=POISSON
 <-- use "LINEAR", "DEGREE" and "EXPONENTIAL" values -->
-SHAPE_TYPE=DEGREE
-A_COEFFICIENT=3.0
-B_COEFFICIENT=4.0
-MEAN_VALUE=30.0
-REQUESTS_COUNT=500
+SHAPE_TYPE=LINEAR
+A_COEFFICIENT=5
+B_COEFFICIENT=3
+MEAN_VALUE=3.0
+REQUESTS_COUNT=10
 RANDOMNESS=50
 
 <-- View properties -->
 
 POINTS_COUNT=200
-SHOWING_POINTS_COUNT=300
+SHOWING_POINTS_COUNT=500
 RENDERING_DELAY=0
-CLEAR_PLOT=true
+CLEAR_PLOT=false
 
 <-- UserImitator and Ganglia settings -->
 
