--- a/pom.xml
+++ b/pom.xml
@@ -87,5 +87,24 @@
                 </executions>
             </plugin>
         </plugins>
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <excludes>
+                    <exclude>settings.properties</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources</directory>
+                <includes>
+                    <include>settings.properties</include>
+                </includes>
+                <targetPath>..</targetPath>
+            </resource>
+        </resources>
     </build>
 </project>
