--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -1,15 +1,15 @@
 <-- common settings -->
 
 <-- use "ARTIFICIAL", "DIURNAL" or "GANGLIA" values -->
-MODELING_TYPE=GANGLIA
+MODELING_TYPE=DIURNAL
 PREDICT_WINDOW=5
-QOS_REQUIREMENT=1200
+QOS_REQUIREMENT=1500
 FUTURE_PREDICTS_COUNT=2
 PROPORTION_OF_MAX=0.8
 
 <-- Generator's parameters -->
 
-SIN_AMPLITUDE=5.0
+SIN_AMPLITUDE=2.0
 SIN_PERIOD=5.0
 SIN_PHASE=0.0
 <-- use "CONSTANT" or "POISSON" values -->
@@ -19,7 +19,7 @@ SHAPE_TYPE=LINEAR
 A_COEFFICIENT=7
 B_COEFFICIENT=3
 MEAN_VALUE=3.0
-REQUESTS_COUNT=1
+REQUESTS_COUNT=60
 RANDOMNESS=50
 
 <-- Databse settings -->
