Issue#25 and UPD settings

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -10,15 +10,15 @@ PROPORTION_OF_MAX=0.8
 <-- Generator's parameters -->
 
 SIN_AMPLITUDE=2.0
-SIN_PERIOD=5.0
+SIN_PERIOD=24.0
 SIN_PHASE=0.0
 <-- use "CONSTANT" or "POISSON" values -->
 DISTRIBUTION_TYPE=POISSON
 <-- use "LINEAR", "DEGREE" and "EXPONENTIAL" values -->
-SHAPE_TYPE=LINEAR
+SHAPE_TYPE=DEGREE
 A_COEFFICIENT=7
-B_COEFFICIENT=3
-MEAN_VALUE=3.0
+B_COEFFICIENT=5
+MEAN_VALUE=100
 REQUESTS_COUNT=20
 RANDOMNESS=50
 
@@ -29,8 +29,8 @@ DATABASE_PASSWORD=asdf1234
 
 <-- View properties -->
 
-POINTS_COUNT=200
-SHOWING_POINTS_COUNT=500
+POINTS_COUNT=1000
+SHOWING_POINTS_COUNT=30
 RENDERING_DELAY=0
 CLEAR_PLOT=false
 
