small upd of settings

--- a/src/main/resources/settings.properties
+++ b/src/main/resources/settings.properties
@@ -15,7 +15,7 @@ SIN_PHASE=0.0
 <-- use "CONSTANT" or "POISSON" values -->
 DISTRIBUTION_TYPE=POISSON
 <-- use "LINEAR", "DEGREE" and "EXPONENTIAL" values -->
-SHAPE_TYPE=DEGREE
+SHAPE_TYPE=LINEAR
 A_COEFFICIENT=7
 B_COEFFICIENT=5
 MEAN_VALUE=100
